<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/atcdes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:src="@drawable/atc" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:gravity="top" >

        <Button
            android:id="@+id/bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="activarBluetooth"
            android:text="@string/activar_bluetooth"
            android:visibility="invisible" />

        <Button
            android:id="@+id/sincronizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bluetooth"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="sincronizarNXT"
            android:text="@string/sincronizar"
            android:visibility="invisible" />

        <Button
            android:id="@+id/conectar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sincronizar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:text="@string/connect"
            android:visibility="invisible" />

        <Button
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="info"
            android:text="@string/info"
            android:visibility="invisible" />

        <Button
            android:id="@+id/sounde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/sounde"
            android:onClick="sounde"
            android:text="@string/vacio" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:text="@string/atcmec"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>